--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
             gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://gcr.io >/dev/null 2>&1
 
             set -x
-            image=https://cloud.docker.com/repository/registry-1.docker.io/tkasu/imdb-list-analyzer
+            image=gcr.io/unity-ads-workshop-test/tkasu-imdb-list-analyzer
 
             docker build -t ${image}:${CIRCLE_SHA1} .
             docker push ${image}:${CIRCLE_SHA1}
