--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,11 +69,12 @@ jobs:
             kubectl apply -f ./manifests/service.yaml -f ./manifests/deployment.yaml
 
             # patch to force Kubernetes to "refresh" deployment, see https://github.com/kubernetes/kubernetes/issues/27081#issuecomment-238078103
-            kubectl patch deployment -n ${namespace} ${service} -p  "{\"spec\":{\"template\":{\"metadata\":{\"labels\":{\"date\":\"`date +'%s'`\"}}}}}
+            kubectl patch deployment -n ${namespace} ${service} -p  "{\"spec\":{\"template\":{\"metadata\":{\"labels\":{\"date\":\"`date +'%s'`\"}}}}}"
 
             kubectl expose deployment -n ${namespace} ${service} --type=LoadBalancer --name=${service}-lb --port=8080
             kubectl get all -n ${namespace} | grep ${service}
             kubectl describe -n ${namespace} service/${service}-lb || true
+
 
 workflows:
   build_update_deploy:
