--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,5 +85,6 @@ workflows:
             branches:
               only:
                 - master
+                - develop
           requires:
             - build
