Fixed extra doublecommas.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,8 +38,8 @@ jobs:
             docker push ${image}:${CIRCLE_SHA1}
 
             if [ "${CIRCLE_BRANCH}" == "master" ] || [ "${CIRCLE_BRANCH}" == "develop" ]; then
-              docker tag ${image}:${CIRCLE_SHA1} ${image}:${CIRCLE_BRANCH}"
-              docker push ${image}:${CIRCLE_BRANCH}"
+              docker tag ${image}:${CIRCLE_SHA1} ${image}:${CIRCLE_BRANCH}
+              docker push ${image}:${CIRCLE_BRANCH}
             fi
 
   deploy:
