--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -35,4 +35,4 @@ spec:
               value: some env value
 
       nodeSelector:
-        cloud.google.com/gke-nodepool: workshop-pool
+        cloud.google.com/gke-nodepool: pool-1
