--- a/infrastructure/manifests/templates/service.yaml
+++ b/infrastructure/manifests/templates/service.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 metadata:
   labels:
     app: ${project_id}
-  name: ${gke_name}
+  name: ${project_id}
   namespace: ${gke_namespace}
 
 spec:
